added UI for question and answer

--- a/learn-and-earn/src/app/question/question.component.html
+++ b/learn-and-earn/src/app/question/question.component.html
@@ -1,1 +1,15 @@
-<p>Hello from question component</p>
+<mat-card class="question-card">
+    <mat-card-title>What is called the Power House of the Cell?</mat-card-title>
+    <mat-card-content>
+        <mat-radio-group class="example-radio-group">
+                <mat-radio-button value="1" class="example-radio-button">Option 1</mat-radio-button>
+                <mat-radio-button value="2" class="example-radio-button">Option 2</mat-radio-button>
+                <mat-radio-button value="3" class="example-radio-button">Option 3</mat-radio-button>
+                <mat-radio-button value="4" class="example-radio-button">Option 4</mat-radio-button>
+          </mat-radio-group>
+    </mat-card-content>
+    <mat-card-actions class="button" style="margin: auto;">
+        <button mat-raised-button color="accent">Back</button>
+        <button mat-raised-button color="primary">Next</button>
+    </mat-card-actions>
+</mat-card>
