--- a/learn-and-earn/src/app/question/question.component.html
+++ b/learn-and-earn/src/app/question/question.component.html
@@ -4,11 +4,11 @@
             <mat-radio-group class="example-radio-group" [(ngModel)]="selectedAnswer">
                     <mat-radio-button class="example-radio-button" 
                     *ngFor = "let answer of answers" [value]="answer">{{ answer }}</mat-radio-button>
-              </mat-radio-group>
+            </mat-radio-group>
         </mat-card-content>
         <mat-card-actions class="button" style="margin: auto;">
             <button mat-raised-button color="accent">Back</button>
-            <button mat-raised-button color="primary">Next</button>
+            <button mat-raised-button color="primary" (click)="onNext(selectedAnswer)">Next</button>
         </mat-card-actions>
         <p>
             selected answer: {{ selectedAnswer }}
