--- a/learn-and-earn/src/app/question/question.component.html
+++ b/learn-and-earn/src/app/question/question.component.html
@@ -1,16 +1,43 @@
-<mat-card class="question-card">
-    <mat-card-title>{{ question }}</mat-card-title>
+<mat-card class="question-card" *ngFor="let q of questions">
+
+    <mat-card-title>{{ q.question }}</mat-card-title>
+
         <mat-card-content>
             <mat-radio-group class="example-radio-group" [(ngModel)]="selectedAnswer">
-                    <mat-radio-button class="example-radio-button" 
-                    *ngFor = "let answer of answers" [value]="answer">{{ answer }}</mat-radio-button>
+                    <mat-radio-button class="example-radio-button">{{ q.answer }}</mat-radio-button>
             </mat-radio-group>
         </mat-card-content>
+
         <mat-card-actions class="button" style="margin: auto;">
             <button mat-raised-button color="accent">Back</button>
             <button mat-raised-button color="primary" (click)="onNext(selectedAnswer)">Next</button>
         </mat-card-actions>
+
         <p>
             selected answer: {{ selectedAnswer }}
         </p>
+
 </mat-card>
+
+<!--
+<mat-card class="question-card" *ngFor="let q of dummyQuestions; let i = index">
+<div>{{i + 1}}
+  <mat-card-title>{{ q.question }}</mat-card-title>
+
+  <mat-card-content>
+      <mat-radio-group class="example-radio-group" [(ngModel)]="selectedAnswer">
+              <mat-radio-button class="example-radio-button">{{ q.answer }}</mat-radio-button>
+      </mat-radio-group>
+  </mat-card-content>
+</div>
+
+      <mat-card-actions class="button" style="margin: auto;">
+          <button mat-raised-button color="accent">Back</button>
+          <button mat-raised-button color="primary" (click)="onNext(selectedAnswer)">Next</button>
+      </mat-card-actions>
+
+      <p>
+          selected answer: {{ selectedAnswer }}
+      </p>
+
+</mat-card> -->
