--- a/learn-and-earn/src/app/question/question.component.html
+++ b/learn-and-earn/src/app/question/question.component.html
@@ -1,21 +1,24 @@
-<mat-card class="question-card" *ngFor="let q of questions">
+<div *ngIf="loading else loaded">
+  <mat-spinner></mat-spinner>
+</div>
 
+<ng-template #loaded>
+  <mat-card class="question-card" *ngFor="let q of questions">
     <mat-card-title>{{ q.question }}</mat-card-title>
-
         <mat-card-content>
             <mat-radio-group class="example-radio-group" [(ngModel)]="selectedAnswer">
                     <mat-radio-button class="example-radio-button" *ngFor="let a of q.answer">{{ a }}</mat-radio-button>
             </mat-radio-group>
         </mat-card-content>
-
         <mat-card-actions class="button" style="margin: auto;">
             <button mat-raised-button color="accent">Back</button>
             <button mat-raised-button color="primary" (click)="onNext(selectedAnswer)">Next</button>
             <button mat-raised-button color="accent" (click)="onDelete(q.id)">Delete</button>
         </mat-card-actions>
-
         <p>
             selected answer: {{ selectedAnswer }}
         </p>
-
 </mat-card>
+</ng-template>
+
+
