--- a/learn-and-earn/src/app/app.component.html
+++ b/learn-and-earn/src/app/app.component.html
@@ -1,11 +1,4 @@
-<mat-toolbar color="primary">
-  <span><a routerLink="/">Learn And Earn</a></span>
-  <ul>
-    <li>
-      <a routerLink="/add-question">Add Questions</a>
-    </li>
-  </ul>
-</mat-toolbar>
+<app-header></app-header>
 
 <main>
   <router-outlet></router-outlet>
