--- a/learn-and-earn/src/app/question/question.component.html
+++ b/learn-and-earn/src/app/question/question.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="loading else loaded">
-  <mat-spinner></mat-spinner>
+  <mat-spinner class="spinner" strokeWidth="3" [diameter]="45"></mat-spinner>
 </div>
 
-<ng-template #loaded>
+<!-- <ng-template #loaded>
   <mat-card class="question-card" *ngFor="let q of questions">
     <mat-card-title>{{ q.question }}</mat-card-title>
         <mat-card-content>
@@ -12,12 +12,24 @@
         </mat-card-content>
         <mat-card-actions class="button" style="margin: auto;">
             <button mat-raised-button color="accent">Back</button>
-            <button mat-raised-button color="primary" (click)="onNext(selectedAnswer)">Next</button>
-            <button mat-raised-button color="accent" (click)="onDelete(q.id)">Delete</button>
+            <button mat-raised-button color="primary" (click)="onNext(q.id)">Next</button>
         </mat-card-actions>
-        <p>
-            selected answer: {{ selectedAnswer }}
-        </p>
+</mat-card>
+</ng-template> -->
+
+<ng-template #loaded>
+  <mat-card class="question-card">
+    <mat-card-title>{{ singleQuestion }}</mat-card-title>
+        <mat-card-content>
+            <mat-radio-group class="example-radio-group" [(ngModel)]="selectedAnswer">
+                    <mat-radio-button class="example-radio-button" *ngFor="let a of singleQuestion.answer">{{ a }}</mat-radio-button>
+            </mat-radio-group>
+        </mat-card-content>
+        <mat-card-actions class="button" style="margin: auto;">
+            <button mat-raised-button color="accent">Back</button>
+            <button mat-raised-button color="primary" (click)="onNext()">Next</button>
+            <!-- <button mat-raised-button color="accent" (click)="onDelete(q.id)">Delete</button> -->
+        </mat-card-actions>
 </mat-card>
 </ng-template>
 
