--- a/learn-and-earn/src/app/question/question.component.html
+++ b/learn-and-earn/src/app/question/question.component.html
@@ -19,7 +19,7 @@
 
 <ng-template #loaded>
   <mat-card class="question-card">
-    <mat-card-title>{{ singleQuestion }}</mat-card-title>
+    <mat-card-title>{{ singleQuestion.question }}</mat-card-title>
         <mat-card-content>
             <mat-radio-group class="example-radio-group" [(ngModel)]="selectedAnswer">
                     <mat-radio-button class="example-radio-button" *ngFor="let a of singleQuestion.answer">{{ a }}</mat-radio-button>
@@ -32,5 +32,3 @@
         </mat-card-actions>
 </mat-card>
 </ng-template>
-
-
