--- a/learn-and-earn/src/app/question/question.component.html
+++ b/learn-and-earn/src/app/question/question.component.html
@@ -27,7 +27,7 @@
         </mat-card-content>
         <mat-card-actions class="button" style="margin: auto;">
             <button mat-raised-button color="accent">Back</button>
-            <button mat-raised-button color="primary" (click)="onNext()">Next</button>
+            <button mat-raised-button color="primary" (click)="onNext(singleQuestion.questionNumber)">Next</button>
             <!-- <button mat-raised-button color="accent" (click)="onDelete(q.id)">Delete</button> -->
         </mat-card-actions>
 </mat-card>
