--- a/learn-and-earn/src/app/question/question.component.html
+++ b/learn-and-earn/src/app/question/question.component.html
@@ -1,21 +1,6 @@
-<div *ngIf="loading else loaded">
+<div *ngIf="isloading else loaded">
   <mat-spinner class="spinner" strokeWidth="3" [diameter]="45"></mat-spinner>
 </div>
-
-<!-- <ng-template #loaded>
-  <mat-card class="question-card" *ngFor="let q of questions">
-    <mat-card-title>{{ q.question }}</mat-card-title>
-        <mat-card-content>
-            <mat-radio-group class="example-radio-group" [(ngModel)]="selectedAnswer">
-                    <mat-radio-button class="example-radio-button" *ngFor="let a of q.answer">{{ a }}</mat-radio-button>
-            </mat-radio-group>
-        </mat-card-content>
-        <mat-card-actions class="button" style="margin: auto;">
-            <button mat-raised-button color="accent">Back</button>
-            <button mat-raised-button color="primary" (click)="onNext(q.id)">Next</button>
-        </mat-card-actions>
-</mat-card>
-</ng-template> -->
 
 <ng-template #loaded>
   <mat-card class="question-card">
@@ -26,9 +11,8 @@
             </mat-radio-group>
         </mat-card-content>
         <mat-card-actions class="button" style="margin: auto;">
-            <button mat-raised-button color="accent">Back</button>
-            <button mat-raised-button color="primary" (click)="onNext(singleQuestion.questionNumber)">Next</button>
-            <!-- <button mat-raised-button color="accent" (click)="onDelete(q.id)">Delete</button> -->
+            <button mat-raised-button color="accent" (click)="onGetPreviousQuestion(singleQuestion.questionNumber)">Back</button>
+            <button mat-raised-button color="primary" (click)="onGetNextQuestion(singleQuestion.questionNumber)">Next</button>
         </mat-card-actions>
 </mat-card>
 </ng-template>
