implemented dailog box

--- a/learn-and-earn/src/app/question/question.component.html
+++ b/learn-and-earn/src/app/question/question.component.html
@@ -16,7 +16,8 @@
             </mat-radio-group>
         </mat-card-content>
         <mat-card-actions class="button" style="margin: auto;">
-            <button mat-raised-button color="primary" (click)="evaluateQuestion(selectedAnswer,singleQuestion.questionNumber)">Check</button>
+            <button mat-raised-button color="primary"
+            (click)="evaluateQuestion(selectedAnswer,singleQuestion.questionNumber)">Check</button>
         </mat-card-actions>
 </mat-card>
 </ng-template>
