added login and signup page

--- a/learn-and-earn/src/app/header/header.component.css
+++ b/learn-and-earn/src/app/header/header.component.css
@@ -1,12 +1,15 @@
 a {
   color: white;
   text-decoration: none;
+  padding: 5px;
 }
 
 ul {
   list-style-type:none;
+  display: flex;
+  margin-left: auto;
 }
 
 .active-link {
-  color: darkturquoise;
+  color:coral;
 }
