--- a/learn-and-earn/src/app/header/header.component.html
+++ b/learn-and-earn/src/app/header/header.component.html
@@ -1,8 +1,14 @@
 <mat-toolbar color="primary">
   <span><a routerLink="/">Learn And Earn</a></span>
   <ul>
-    <li>
+    <!-- <li>
       <a routerLink="/add-question" routerLinkActive="active-link">Add Questions</a>
+    </li> -->
+    <li>
+      <a routerLink="/login" routerLinkActive="active-link">Login</a>
+    </li>
+    <li>
+      <a routerLink="/signup" routerLinkActive="active-link">Signup</a>
     </li>
   </ul>
 </mat-toolbar>
