--- a/learn-and-earn/src/app/auth/signup/signup.component.css
+++ b/learn-and-earn/src/app/auth/signup/signup.component.css
@@ -5,3 +5,10 @@ mat-form-field {
 mat-spinner {
 margin: auto;
 }
+
+mat-card {
+  width: fit-content;
+  margin: auto;
+  position: relative;
+  top: 30%;
+}
