--- a/learn-and-earn/src/app/header/header.component.css
+++ b/learn-and-earn/src/app/header/header.component.css
@@ -1,15 +1,35 @@
+button {
+  background-color: #bdd4e7;
+  background-image: linear-gradient(315deg, #bdd4e7 0%, #8693ab 74%);
+}
+
+.button {
+  position: relative;
+  bottom: 50%;
+  left: 60%;
+}
+
+
+.login {
+  margin-right: 10%;
+}
+
 a {
-  color: white;
   text-decoration: none;
-  padding: 5px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: white;
+ }
+
+mat-toolbar {
+  background-color: black;
+  position: relative;
+  top: 25%;
 }
 
-ul {
-  list-style-type:none;
-  display: flex;
-  margin-left: auto;
+span {
+  margin-right: 5%;
 }
 
-.active-link {
-  color:coral;
+.links {
+  margin-left: 10%;
 }
