removed angular material and installed bootstrap

--- a/learn-and-earn/src/app/dialogbox/dialogbox.component.html
+++ b/learn-and-earn/src/app/dialogbox/dialogbox.component.html
@@ -1,8 +1,8 @@
-<h1 mat-dialog-title>{{ data.dialogDescription }}</h1>
+<!-- <h1 mat-dialog-title>{{ data.dialogDescription }}</h1>
 
 <h3 mat-dialog-content>{{ data.dialogContent }}</h3>
 
 <div mat-dialog-actions align="center">
     <button mat-raised-button color="primary" mat-dialog-close
      (click)="onGetNextQuestion(data.questionNumber)">Close</button>
-</div>
+</div> -->
