--- a/learn-and-earn/src/app/questions/add-questions/add-questions.component.html
+++ b/learn-and-earn/src/app/questions/add-questions/add-questions.component.html
@@ -1,4 +1,4 @@
-<form class="add-question">
+<!-- <form class="add-question">
   <mat-form-field>
     <mat-label>Add Question Number:</mat-label>
     <input matInput type="number" #questionNumber>
@@ -19,4 +19,4 @@
   </div>
 </form>
 
-
+ -->
