added bootstrap latest

--- a/learn-and-earn/src/styles.css
+++ b/learn-and-earn/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-.success .mat-dialog-container {
+/* .success .mat-dialog-container {
   border: 2px solid green;
   background-color: #e9ffdb;
 }
@@ -16,4 +16,4 @@
 
 .mat-progress-spinner circle, .mat-spinner circle {
   stroke: green!important;
-}
+} */
