--- a/learn-and-earn/src/app/auth/signup/signup.component.html
+++ b/learn-and-earn/src/app/auth/signup/signup.component.html
@@ -1,12 +1,28 @@
-  <mat-spinner *ngIf="isLoading"></mat-spinner>
-    <form (submit)="onSignup(signupForm)" #signupForm="ngForm" *ngIf="!isLoading">
-        <mat-form-field>
-            <input matInput type="email" placeholder="E-Mail" name="email" ngModel #emailInput="ngModel" required email>
-            <mat-error *ngIf="emailInput.invalid">Please enter a valid email.</mat-error>
-        </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Password" type="password" name="password" ngModel #passwordInput="ngModel" required>
-            <mat-error *ngIf="passwordInput.invalid">Please enter a valid password.</mat-error>
-        </mat-form-field>
-        <button mat-raised-button color="accent" type="submit">Sign up</button>
-    </form>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm">
+          <img src="../../../assets/images/signup-img.svg" class="img-fluid" alt="login">
+        </div>
+        <div class="col-sm">
+          <div class="mb-3 mt-5">
+            <form class="row g-3" (submit)="onSignup(signupForm)" #signupForm="ngForm">
+              <div class="col-md-6">
+                <label for="inputEmail4" class="form-label">Email</label>
+                <input type="email" class="form-control" id="inputEmail4" name="email"
+                 ngModel #emailInput="ngModel" required email>
+                 <span *ngIf="emailInput.touched && emailInput.invalid">Please enter a valid email.</span>
+              </div>
+              <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">Password</label>
+                <input type="password" class="form-control" id="inputPassword4" name="password"
+                 ngModel #passwordInput="ngModel" required>
+                 <span *ngIf="passwordInput.touched && passwordInput.invalid">Please enter a valid password.</span>
+              </div>
+              <div class="col-12">
+                <button type="submit" class="btn btn-primary">Sign up</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
