--- a/learn-and-earn/src/app/auth/login/login.component.css
+++ b/learn-and-earn/src/app/auth/login/login.component.css
@@ -1,15 +1,3 @@
-mat-form-field {
-  width: 100%;
-}
-
-mat-spinner {
-margin: auto;
-}
-
-
-mat-card {
-  width: fit-content;
-  margin: auto;
-  position: relative;
-  top: 30%;
+.spinner-border {
+  color: #6C63FF;
 }
