--- a/learn-and-earn/src/app/home/header/header.component.html
+++ b/learn-and-earn/src/app/home/header/header.component.html
@@ -1,27 +1,6 @@
-  <!-- <div>
-    <a routerLink="/">
-      <img src="../../assets/images/logo.png" style="height: 300px;">
-    </a>
-  </div>
-    <div class="button">
-        <a routerLink="/login" routerLinkActive="active-link">
-          <button mat-raised-button class="login">Login</button>
-        </a>
-        <a routerLink="/signup" routerLinkActive="active-link">
-          <button mat-raised-button class="signup">Signup</button>
-        </a>
-        <button mat-raised-button class="logout" *ngIf="userIsAuthenticated">Logout</button>
-    </div>
-
-    <div class="links">
-      <span><a href="#">About Us</a></span>
-      <span><a href="#">Get in Touch</a></span>
-      <span><a href="#">Careers</a></span>
-    </div> -->
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Learn&Earn</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
