--- a/learn-and-earn/src/app/auth/login/login.component.html
+++ b/learn-and-earn/src/app/auth/login/login.component.html
@@ -17,23 +17,21 @@
      <div class="col-sm">
         <div class="mb-3 mt-5 form">
            <form class="row g-3" (submit)="onLogin(loginForm)" #loginForm="ngForm">
-        <!-- Email input -->
-        <div class="form-outline mb-4">
+        <!-- Email -->
+        <div class="form-outline col-sm-8">
           <input type="email" class="form-control" id="inputEmail4" name="email"
           ngModel #emailInput="ngModel" required email autocomplete="on" placeholder="Email address or phone number" />
           <span *ngIf="emailInput.touched && emailInput.invalid" class="text-danger">Please enter a valid email.</span>
         </div>
-
         <!-- Password input -->
-        <div class="form-outline mb-4">
+        <div class="form-outline mb-4 col-sm-8">
           <input type="password" class="form-control" id="inputPassword4" name="password"
           ngModel #passwordInput="ngModel" required autocomplete="on" placeholder="Password"/>
           <span *ngIf="passwordInput.touched && passwordInput.invalid" class="text-danger">Please enter a valid password.</span>
         </div>
-
         <!-- 2 column grid layout for inline styling -->
         <div class="row mb-4">
-          <div class="col d-flex justify-content-center">
+          <div class="col d-flex">
             <!-- Checkbox -->
             <div class="form-check">
               <input
@@ -46,18 +44,14 @@
               <label class="form-check-label" for="form2Example3">Remember me</label>
             </div>
           </div>
-
-          <div class="col">
-            <!-- Simple link -->
+          <div class="col" style="margin-right: 8%;">
             <a href="#!">Forgot password?</a>
           </div>
         </div>
-
         <!-- Submit button -->
-        <button type="submit" class="btn btn-primary btn-block mb-4">Login</button>
-
-        <div class="text-center">
-          <p>Not a member? <a href="#!">Register</a></p>
+        <button type="submit" class="btn btn-primary btn-block mb-4 col-sm-8">Login</button>
+        <div>
+          <p>Not a member? <button class="btn btn-outline-primary" (click)="signup()">Register</button></p>
         </div>
       </form>
         </div>
