need to fix notification service

--- a/learn-and-earn/src/app/dialogbox/dialogbox.component.html
+++ b/learn-and-earn/src/app/dialogbox/dialogbox.component.html
@@ -1,8 +1,4 @@
-<!-- <h1 mat-dialog-title>{{ data.dialogDescription }}</h1>
-
-<h3 mat-dialog-content>{{ data.dialogContent }}</h3>
-
-<div mat-dialog-actions align="center">
-    <button mat-raised-button color="primary" mat-dialog-close
-     (click)="onGetNextQuestion(data.questionNumber)">Close</button>
-</div> -->
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
