--- a/learn-and-earn/src/app/questions/view-questions/question.component.html
+++ b/learn-and-earn/src/app/questions/view-questions/question.component.html
@@ -1,24 +1,21 @@
-<div *ngIf="isloading else loaded">
-  <mat-spinner class="spinner" strokeWidth="3" [diameter]="45"></mat-spinner>
+<div class="container">
+  <div class="card w-75 text-dark bg-light">
+    <div class="card-body">
+      <h5 class="card-title">{{ singleQuestion.question }}</h5>
+      <div class="form-check" *ngFor="let answer of singleQuestion.answer">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="flexRadioDefault"
+          id="flexRadioDefault1"
+          [value]="answer"
+        />
+        <label class="form-check-label" for="flexRadioDefault1"> {{ answer }} </label>
+      </div>
+      <div class="text-center">
+        <button type="button" class="btn btn-outline-primary mt-3"
+       (click)="evaluateQuestion(selectedAnswer)">Next</button>
+      </div>
+    </div>
+  </div>
 </div>
-
-<ng-template #loaded>
-  <mat-card class="question-card">
-    <mat-card-title>{{ singleQuestion.question }}</mat-card-title>
-        <mat-card-content>
-            <mat-radio-group class="example-radio-group" [(ngModel)]="selectedAnswer">
-                    <mat-radio-button
-                     class="example-radio-button"
-                     *ngFor="let answer of singleQuestion.answer"
-                     [value]="answer">
-                       {{ answer }}
-                    </mat-radio-button>
-            </mat-radio-group>
-        </mat-card-content>
-        <mat-card-actions class="button" style="margin: auto;">
-            <button mat-raised-button color="primary"
-            (click)="evaluateQuestion(selectedAnswer,singleQuestion.questionNumber)">Check</button>
-        </mat-card-actions>
-</mat-card>
-</ng-template>
-
