--- a/learn-and-earn/src/app/navigation/navigation.component.html
+++ b/learn-and-earn/src/app/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand">Learn&Earn</a>
+    <a class="navbar-brand" routerLink="/navigation">Learn&Earn</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
      data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -34,4 +34,3 @@
     </div>
   </div>
 </nav>
-
