--- a/learn-and-earn/src/app/view-questions/question.component.html
+++ b/learn-and-earn/src/app/view-questions/question.component.html
@@ -1,3 +1,5 @@
+<app-navigation></app-navigation>
+
 <div class="container">
   <div class="card w-75 text-dark bg-light">
     <div class="card-body">
