added notification feature

--- a/learn-and-earn/src/app/auth/login/login.component.html
+++ b/learn-and-earn/src/app/auth/login/login.component.html
@@ -5,6 +5,8 @@
   </div>
 </div>
 
+<app-notification></app-notification>
+
 <!-- login form -->
 <div class="container-fluid" *ngIf="!isLoading">
   <div class="row">
