added cards for different subjects

--- a/learn-and-earn/src/app/navigation/navigation.component.html
+++ b/learn-and-earn/src/app/navigation/navigation.component.html
@@ -34,3 +34,65 @@
     </div>
   </div>
 </nav>
+
+<div class="row container-fluid">
+  <div class="col-md-4 mt-3">
+    <div class="card">
+      <h5 class="card-header">HTML Quiz</h5>
+      <div class="card-body">
+        <h6 class="card-title text-muted">40+ Questions on HTML</h6>
+        <p class="card-text">The basic building block of a website.</p>
+        <a href="#" class="btn btn-primary">Attempt</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4 mt-3">
+    <div class="card">
+      <h5 class="card-header">CSS Quiz</h5>
+      <div class="card-body">
+        <h1 class="card-title text-muted">Coming Soon!</h1>
+        <a href="#" class="btn btn-primary disabled">Attempt</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4 mt-3">
+    <div class="card">
+      <h5 class="card-header">Javascript Quiz</h5>
+      <div class="card-body">
+        <h1 class="card-title text-muted">Coming Soon!</h1>
+        <a href="#" class="btn btn-primary disabled">Attempt</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row container-fluid">
+  <div class="col-md-4 mt-3">
+    <div class="card">
+      <h5 class="card-header">Bootstrap Quiz</h5>
+      <div class="card-body">
+        <h1 class="card-title text-muted">Coming Soon!</h1>
+        <a href="#" class="btn btn-primary disabled">Attempt</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4 mt-3">
+    <div class="card">
+      <h5 class="card-header">C# Quiz</h5>
+      <div class="card-body">
+        <h1 class="card-title text-muted">Coming Soon!</h1>
+        <a href="#" class="btn btn-primary disabled">Attempt</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4 mt-3">
+    <div class="card">
+      <h5 class="card-header">.NET Core Quiz</h5>
+      <div class="card-body">
+        <h1 class="card-title text-muted">Coming Soon!</h1>
+        <a href="#" class="btn btn-primary disabled">Attempt</a>
+      </div>
+    </div>
+  </div>
+</div>
+
