--- a/learn-and-earn/src/app/view-questions/question.component.html
+++ b/learn-and-earn/src/app/view-questions/question.component.html
@@ -1,27 +1,31 @@
-<app-navigation></app-navigation>
+<!-- spinner -->
+<div class="d-flex justify-content-center">
+  <div class="spinner-border m-5" role="status" *ngIf="isLoading">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+</div>
 
-<div class="container">
-  <div class="card w-75 text-dark bg-light">
+<!-- question template -->
+<div class="container" *ngIf="!isLoading">
+  <div class="card w-50 text-dark bg-light m-auto mt-5">
+    <h5 class="card-header">{{ singleQuestion.question }}</h5>
     <div class="card-body">
-      <h5 class="card-title">{{ singleQuestion.question }}</h5>
-      <div class="form-check" *ngFor="let answer of singleQuestion.answer">
+      <div class="form-check" *ngFor="let item of singleQuestion.answers">
         <input
-          class="form-check-input"
-          type="radio"
-          name="flexRadioDefault"
-          id="flexRadioDefault1"
-          [value]="answer"
-        />
-        <label class="form-check-label" for="flexRadioDefault1"> {{ answer }} </label>
+        class="form-check-input"
+        type="radio"
+        name="selectedAnswer"
+        [value]="item.value"
+        (change)="evaluateQuestion(item)"
+         />
+        <label class="form-check-label">{{ item.key }}</label>
       </div>
       <div class="text-center">
-        <button type="button" class="btn btn-outline-primary mt-3"
-       (click)="evaluateQuestion(selectedAnswer)">Next</button>
+        <button type="button" class="btn btn-outline-primary mt-3">Next</button>
       </div>
     </div>
   </div>
 </div>
 
-<div>
-  <app-notification></app-notification>
-</div>
+<!-- notification -->
+<app-notification></app-notification>
