--- a/learn-and-earn/src/app/auth/login/login.component.html
+++ b/learn-and-earn/src/app/auth/login/login.component.html
@@ -10,9 +10,6 @@
   <div class="row">
     <div class="col-sm">
       <img src="../../../assets/images/logo-img.svg" class="img-fluid mt-5" alt="login">
-      <div style="margin-top: 5rem; margin-left: 10rem;">
-        <h1>Learn&Earn</h1>
-      </div>
     </div>
      <div class="col-sm">
         <div class="mb-3 mt-5 form">
@@ -40,16 +37,17 @@
                 value=""
                 id="form2Example3"
                 checked
+                style="background-color: #6351ce;"
               />
               <label class="form-check-label" for="form2Example3">Remember me</label>
             </div>
           </div>
-          <div class="col" style="margin-right: 8%;">
+          <div class="col">
             <a href="#!">Forgot password?</a>
           </div>
         </div>
         <!-- Submit button -->
-        <button type="submit" class="btn btn-primary btn-block mb-4 col-sm-8">Login</button>
+        <button type="submit" class="btn btn-primary btn-block mb-4 col-sm-8" style="background-color: #6351ce;">Login</button>
         <div>
           <p>Not a member? <button class="btn btn-outline-primary" (click)="signup()">Register</button></p>
         </div>
@@ -59,3 +57,142 @@
   </div>
 </div>
 
+
+  <!-- Footer -->
+  <footer
+          class="text-center text-lg-start text-white"
+          style="background-color: #1c2331"
+          >
+    <!-- Section: Links  -->
+    <section class="">
+      <div class="container text-center text-md-start mt-5">
+        <!-- Grid row -->
+        <div class="row mt-3">
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 mt-4">
+            <!-- Content -->
+            <h6 class="fw-bold" style="font-family: Bodoni; font-size: xxx-large;">Learn&Earn</h6>
+            <hr
+                class="mb-4 mt-0 d-inline-block mx-auto"
+                style="width: 60px; background-color: #7c4dff; height: 2px"/>
+            <p>
+              Practice basics of Web Development in MCQs pattern.
+              But, here's the catch. You earn points for each correct answer which you
+              can redeem later for actual <strong>Money</strong>.
+            </p>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 mt-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold">Products</h6>
+            <hr
+                class="mb-4 mt-0 d-inline-block mx-auto"
+                style="width: 60px; background-color: #7c4dff; height: 2px"
+                />
+            <p>
+              <a href="#!" class="text-white">HTML</a>
+            </p>
+            <p>
+              <a href="#!" class="text-white">CSS</a>
+            </p>
+            <p>
+              <a href="#!" class="text-white">Javascript</a>
+            </p>
+            <p>
+              <a href="#!" class="text-white">Bootstrap</a>
+            </p>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4 mt-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold">Useful links</h6>
+            <hr
+                class="mb-4 mt-0 d-inline-block mx-auto"
+                style="width: 60px; background-color: #7c4dff; height: 2px"
+                />
+            <p>
+              <a href="#!" class="text-white">Your Account</a>
+            </p>
+            <p>
+              <a href="#!" class="text-white">Become an Affiliate</a>
+            </p>
+            <p>
+              <a href="#!" class="text-white">Shipping Rates</a>
+            </p>
+            <p>
+              <a href="#!" class="text-white">Help</a>
+            </p>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 mt-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold">Contact</h6>
+            <hr
+                class="mb-4 mt-0 d-inline-block mx-auto"
+                style="width: 60px; background-color: #7c4dff; height: 2px"
+                />
+            <p><i class="bi bi-house-door mr-3" style="color: #7c4dff; font-size: 20px;"></i> Pune, Maharashtra</p>
+            <p><i class="bi bi-envelope-fill mr-3" style="color: #7c4dff; font-size: 20px;"></i> saraf.vikas5@gmail.com</p>
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!-- Grid row -->
+      </div>
+    </section>
+    <!-- Section: Links  -->
+
+     <!-- Section: Social media -->
+     <section
+     class="d-flex justify-content-between p-2"
+     style="background-color: #6351ce"
+     >
+<!-- Left -->
+<div class="me-5">
+<span>Get connected with us on social networks:</span>
+</div>
+<!-- Left -->
+
+<!-- Right -->
+<div>
+<a href="" class="text-white me-4">
+  <i class="bi bi-facebook"></i>
+</a>
+<a href="" class="text-white me-4">
+  <i class="bi bi-twitter"></i>
+</a>
+<a href="" class="text-white me-4">
+  <i class="bi bi-google"></i>
+</a>
+<a href="" class="text-white me-4">
+  <i class="bi bi-instagram"></i>
+</a>
+<a href="" class="text-white me-4">
+  <i class="bi bi-linkedin"></i>
+</a>
+<a href="" class="text-white me-4">
+  <i class="bi bi-github"></i>
+</a>
+</div>
+<!-- Right -->
+</section>
+<!-- Section: Social media -->
+
+    <!-- Copyright -->
+    <div
+         class="text-center p-3"
+         style="background-color: rgba(0, 0, 0, 0.2)"
+         >
+      © 2021 Copyright:
+      <a class="text-white" href="#"
+         >Learn&Earn.com</a
+        >
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
