--- a/learn-and-earn/src/app/auth/login/login.component.html
+++ b/learn-and-earn/src/app/auth/login/login.component.html
@@ -61,7 +61,7 @@
   <!-- Footer -->
   <footer
           class="text-center text-lg-start text-white"
-          style="background-color: #1c2331"
+          style="background-color: #1c2331" *ngIf="!isLoading"
           >
     <!-- Section: Links  -->
     <section class="">
