--- a/learn-and-earn/src/app/view-questions/question.component.html
+++ b/learn-and-earn/src/app/view-questions/question.component.html
@@ -10,21 +10,28 @@
   <div class="card w-50 text-dark bg-light m-auto mt-5">
     <h5 class="card-header">{{ singleQuestion.question }}</h5>
     <div class="card-body">
-      <div class="form-check" *ngFor="let item of singleQuestion.answers">
-        <input
-        class="form-check-input"
-        type="radio"
-        name="selectedAnswer"
-        [value]="item.value"
-        (change)="evaluateQuestion(item)"
-         />
-        <label class="form-check-label">{{ item.key }}</label>
-      </div>
-      <div class="text-center">
-        <button type="button" class="btn btn-outline-primary mt-3">Next</button>
-      </div>
+      <form (submit)="evaluateQuestion(answer)" #answer="ngForm">
+        <div class="form-check" *ngFor="let item of singleQuestion.answers">
+          <input
+          class="form-check-input"
+          type="radio"
+          name="selectedAnswer"
+          [value]="item.value"
+          ngModel
+          #selectedAnswer="ngModel"
+           />
+          <label class="form-check-label">{{ item.key }}</label>
+        </div>
+        <div class="text-center">
+          <button type="submit" class="btn btn-outline-primary mt-3">Next</button>
+        </div>
+      </form>
     </div>
   </div>
+
+  <!-- close the quiz -->
+  <button type="button" class="btn btn-outline-danger position-absolute top-0 end-0 mt-3 me-3"
+   routerLink="/navigation">Close</button>
 </div>
 
 <!-- notification -->
