added superficial logic for points gaining

--- a/learn-and-earn/src/app/auth/login/login.component.html
+++ b/learn-and-earn/src/app/auth/login/login.component.html
@@ -77,8 +77,8 @@
                 style="width: 60px; background-color: #7c4dff; height: 2px"/>
             <p>
               Practice basics of Web Development in MCQs pattern.
-              But, here's the catch. You earn points for each correct answer which you
-              can redeem later for actual <strong>Money</strong>.
+              You earn points for each correct answer which you
+              can show off to peers.
             </p>
           </div>
           <!-- Grid column -->
