--- a/learn-and-earn/src/app/view-questions/question.component.html
+++ b/learn-and-earn/src/app/view-questions/question.component.html
@@ -30,8 +30,12 @@
   </div>
 
   <!-- close the quiz -->
-  <button type="button" class="btn btn-outline-danger position-absolute top-0 end-0 mt-3 me-3"
+  <button type="button" class="btn btn-outline-danger position-absolute top-0 end-0 mt-3 me-3 "
    routerLink="/navigation">Close</button>
+
+   <!-- point counter -->
+   <button type="button" class="btn btn-outline-success position-absolute top-0 start-0 mt-3 ms-3">
+     Points: {{points}}</button>
 </div>
 
 <!-- notification -->
