added logic for getting next question

--- a/learn-and-earn/src/app/auth/login/login.component.html
+++ b/learn-and-earn/src/app/auth/login/login.component.html
@@ -189,9 +189,7 @@
          style="background-color: rgba(0, 0, 0, 0.2)"
          >
       © 2021 Copyright:
-      <a class="text-white" href="#"
-         >Learn&Earn.com</a
-        >
+      <a class="text-white" href="https://vikas-saraf.netlify.com" target="_blank">Vikas Saraf</a >
     </div>
     <!-- Copyright -->
   </footer>
